@@ -96,5 +96,7 @@ Clean up
   Rename ``GModelSpatialDiffuseMap::set_mc_cone()`` to ``GModelSpatialDiffuseMap::mc_cone()`` and add ``mc_cone()``getter methods.
 * [`2893 <https://cta-redmine.irap.omp.eu/issues/2893>`_] -
   Remove ``GCTAResponseCache::ndirs()``, ``GCTAResponseCache::nerecos()`` and ``GCTAResponseCache::netrues()`` methods.
+* [`1829 <https://cta-redmine.irap.omp.eu/issues/1829>`_] -
+  ``GSkyProjection::coordsys()`` method now returns ``CEL`` instead of ``EQU``.
 * [`1761 <https://cta-redmine.irap.omp.eu/issues/1761>`_] -
   Remove ``GModelSpatialDiffuseCube::maps()`` and ``GModelSpatialDiffuseCube::pixels()`` methods.
