@@ -1,7 +1,7 @@
 /***************************************************************************
  *                  GHealpix.hpp - Healpix projection class                *
  * ----------------------------------------------------------------------- *
- *  copyright (C) 2010-2015 by Juergen Knoedlseder                         *
+ *  copyright (C) 2010-2020 by Juergen Knoedlseder                         *
  * ----------------------------------------------------------------------- *
  *                                                                         *
  *  This program is free software: you can redistribute it and/or modify   *
@@ -51,7 +51,7 @@ public:
     GHealpix(void);
     GHealpix(const int&         nside,
              const std::string& ordering = "NESTED",
-             const std::string& coordsys = "EQU");
+             const std::string& coordsys = "CEL");
     explicit GHealpix(const GFitsHDU& hdu);
     GHealpix(const GHealpix& wcs);
     virtual ~GHealpix(void);
