@@ -1,7 +1,7 @@
 /***************************************************************************
  *          GSkyProjection.hpp - Abstract sky projection base class        *
  * ----------------------------------------------------------------------- *
- *  copyright (C) 2010-2014 by Juergen Knoedlseder                         *
+ *  copyright (C) 2010-2020 by Juergen Knoedlseder                         *
  * ----------------------------------------------------------------------- *
  *                                                                         *
  *  This program is free software: you can redistribute it and/or modify   *
@@ -85,7 +85,7 @@ protected:
     virtual bool compare(const GSkyProjection& proj) const = 0;
 
     // Protected members
-    int m_coordsys;   //!< 0=EQU, 1=GAL
+    int m_coordsys;   //!< 0=CEL, 1=GAL
 };
 
 #endif /* GSKYPROJECTION_HPP */
