@@ -32,6 +32,7 @@
         Add GSkyDir::moon() method (#1855)
         Add GSkyDir::sun(), GSkyDir::precess() and GTime::julian_epoch() methods
           (#1854)
+        GSkyProjection::coordsys() method now returns CEL instead of EQU (#1829)
         Remove GModelSpatialDiffuseCube::maps() and
           GModelSpatialDiffuseCube::pixels() methods (#1761)
         Implement INTEGRAL/SPI instrument interface (#733, #734, #735, #736,
